distance between distributions

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -854,6 +854,17 @@
   address     = "Australian Government, Department of the Environment and Energy"
 }
  
+ 
+@ARTICLE{ieee-irish,
+  author={R. J. {Hyndman} and X. {Liu} and P. {Pinson}},
+  journal={IEEE Power and Energy Magazine}, 
+  title={Visualizing Big Energy Data: Solutions for This Crucial Component of Data Analysis}, 
+  year={2018},
+  volume={16},
+  number={3},
+  pages={18-25},
+  doi={10.1109/MPE.2018.2801441}}
+  
 @Book{knitr,
   title = {Dynamic Documents with {R} and knitr},
   author = {Yihui Xie},
