--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -476,12 +476,12 @@ Results are presented in two parts. The dependence of $wpd$ on $nx$ and $nfacet$
 ### Simulation design
 
 Observations are generated from a Gamma(2,1) distribution for each combination of $nx$ and $nfacet$ from the following sets: $nx = nfacet = \{2, 3, 5, 7, 14, 20, 31, 50\}$ to cover a wide range of levels from very low to moderately high. Each combination is being referred to as a _panel_. That is, data is being generated for each of the panels $\{nx = 2, nfacet = 2\}, \{nx = 2, nfacet = 3\}, \{nx = 2, nfacet = 5\},  \dots, \{nx = 50, nfacet = 31\}, \{nx = 50, nfacet = 50\}$. For each of the $64$ panels, $ntimes = 500$ observations are drawn for each combination of the categories. That is, if we consider the panel  $\{nx = 2, nfacet = 2\}$, $500$ observations are generated for each of the combination of categories from the panel, namely, $\{(1, 1), (1, 2), (2, 1), (2, 2)\}$. The values
-of $wpd$ is obtained for each of the panels. This design corresponds to $D_{null}$ as each combination of categories in a panel are drawn from the same distribution. Furthermore, the data is simulated for each of the panels $nsim=200$ times, so that the distribution of $wpd$ under $D_{null}$ could be observed.
+of $wpd$ is obtained for each of the panels. This design corresponds to $D_{null}$ as each combination of categories in a panel are drawn from the same distribution. Furthermore, the data is simulated for each of the panels $nsim=200$ times, so that the distribution of $wpd$ under $D_{null}$ could be observed. $wpd_{l, s}$ denotes the value of $wpd$ obtained for the $l^{th}$ panel and $s^{th}$ simulation.
 
 
 ### Results
 
-Figure \ref{fig:raw} shows the distribution of $wpd$ plotted across different $nx$ and $nfacet$ categories. Since under $D_{null}$, there is no difference in distributions across different categories, we expect the distance measure $wpd$ to reflect that as well and have the same null distribution across categories. But Figure \ref{fig:raw} shows that both the location and scale of the distributions change across panels. This is not desirable under $D_{null}$ as it would mean comparisons of $wpd$ values is not appropriate across different $nx$ and $nfacet$. Figure \ref{fig:quadratic} shows how the median of $wpd_{raw}$ varies with the total number of distances $nx*nfacet$ for each panel. The median increases abruptly for lower values of $nx*nfacet$ and slowly for higher $nx*nfacet$. 
+Figure \ref{fig:raw} shows the distribution of $wpd$ plotted across different $nx$ and $nfacet$ categories. Since under $D_{null}$, there is no difference in distributions across different categories, we expect the distance measure $wpd$ to reflect that as well and have the same null distribution across categories. But Figure \ref{fig:raw} shows that both the location and scale of the distributions change across panels. This is not desirable under $D_{null}$ as it would mean comparisons of $wpd$ values is not appropriate across different $nx$ and $nfacet$. Figure \ref{fig:quadratic} shows how the median of $wpd$ varies with the total number of distances $nx*nfacet$ for each panel. The median increases abruptly for lower values of $nx*nfacet$ and slowly for higher $nx*nfacet$. 
 
 <!-- Furthermore, simulation results also show that the values of $wpd$ indeed depend upon the underlying distribution. This is also not desirable as the intended aim of $wpd$ is to capture differences in categories irrespective of the distribution from which the data is generated. -->
 
@@ -556,13 +556,12 @@ G21_norm %>%
 
 ### Modelling approach
 
-
 _Linear model_  
 
-A log-linear model is fitted to see how the values of $wpd_{raw}$ changes with the values of $nx$ and $nfacet$.  The model is of the form $$y_k = a+b*log(z_k) + e_k$$, where, $y_k = median_l(x_{k, l})$ and $e_k$ are idiosyncratic errors. We have gone with the approach of fitting a linear regression model to estimate the parameters $a$ and $b$. The estimates and other model summary is given in \ref{tab:linear-model}.
+A linear model is fitted to model the relationship between $wpd$ and $nx*nfacet$. The model is of the form $$y_l = a+b*log(z_l) + e_l$$, where, $y_l = median_m(x_{l, m})$, $z_l$ is the $l^{th}$ panel and $e_l$ are idiosyncratic errors, with parameters $a$ and $b$ being estimated from the data generated through the simulation study described in Section \ref{sec:sim-study}. The estimates and other model summary is given in \ref{tab:linear-model}.
 
 ```{r linear-model, message=FALSE}
-G21 <- read_rds(here("simulations/raw/null_design_quantrans/data-agg/all_data_wpd_Gamma21.rds"))
+G21 <- read_rds(here("simulations/raw/null_design_quantrans/data-agg/all_data_wpd_N01.rds"))
 
 G21_median <- G21 %>% 
   group_by(nx*nfacet) %>% 
@@ -570,23 +569,27 @@ G21_median <- G21 %>%
 
 
 # fit model median to log(nx*nfacet)
-fit_lm2 <- lm(actual ~ poly(log(`nx * nfacet`) ,1, raw=TRUE), data = G21_median)
+fit_lm2 <- lm(actual ~ log(`nx * nfacet`) , data = G21_median)
 
-summary(fit_lm2)
+broom::tidy(fit_lm2) %>% kable(caption = "Results of linear model to capture the relationship between wpd and number of comparisons.")
 ```
 
 
-The final idea is to find a transformation on $wpd_{raw}$ which would remove the effect of $nx*nfacet$ on $wpd_{raw}$ and thus is defined as follows:
-$y^* =  y - \hat b*log(z)$, where 
-$y^*$ is the $median(wpd_{norm})$, 
-$y$ is the $median(wpd_{raw})$,
-$\hat b$ is the estimated value of the parameter $b$, 
-and $z = nx*nfacet$.
+<!-- # ```{r} -->
+<!-- # results3 <- broom::tidy(fit_lm2) -->
+<!-- # library(ggfortify) -->
+<!-- # autoplot(fit_lm2, which = 1:6) + theme_minimal() -->
+<!-- # ``` -->
 
-The above takes care of the mean and the heterogeneity of the median transformed measure. But, the original distribution will still have some dissimilarities in shape and location specially for small values of $nx$ and $nfacet$ as could be seen in \ref{fig:}
+The idea is to find a transformation on $wpd$ which would remove the effect of $nx*nfacet$ on $wpd$ and thus is defined as the residuals:
+$y^* =  y - \hat a -  \hat b*log(z)$, where 
+$y^*$ is the $wpd_{norm}^{linear}$, 
+$\hat a$ and $\hat b$ are the estimated values of the parameter $a$ and $b$ and $z = nx*nfacet$.
 
+Defining $wpd_{norm}^{linear}$ in this way forces the mean to be zero and variability to be uniform across the median $wpd$ values as could be seen in Figure \ref{fig:resi-linear}.  
+<!-- But, the original distribution will still have some dissimilarities in shape and location specially for small values of $nx$ and $nfacet$ as could be seen in \ref{fig:} -->
 
-```{r}
+```{r resi-linear, fig.cap = "$wpd_{norm}^{linear}$ which are defined as the residuals of the linear model have mean zero and are homogenous. Further, by design they are independent of the $nx*nfacet$ and hence could be a potential candidate for $wpd_norm$."}
 
 intercept <- fit_lm2$coefficients[1]
 slope <- fit_lm2$coefficients[2]
@@ -594,7 +597,7 @@ slope <- fit_lm2$coefficients[2]
 G21 %>% 
   ggplot(aes(x=log(nx*nfacet), y = (value - slope*log(nx*nfacet)))) +
   geom_point() + stat_summary(fun=mean, geom="line", aes(group=1), color = "blue") + 
-  ylab("wpd_norm =  wpd_raw - slope*log(nx*nfacet)")
+  ylab("wpd normalised using linear modelling approach")
 
 
 ```
@@ -608,12 +611,11 @@ G21 %>%
 
 _Generalised linear model_  
 
-In the linear model approach, $wpd_{raw} \in R$ was assumed, whereas, $wpd_{raw}$, Jensen-Shannon Distance (JSD) lies between 0 and 1. Furthermore, JSD follows a Chi-square distribution, which is a special case of Gamma distribution and hence belongs to exponential family of distributions. Therefore, we can fit a generalized linear model instead of a linear model to allow for the response variable to follow a Gamma distribution. The inverse link is used when we know that the mean response is bounded, which is applicable in our case since $0 \leq wpd_{raw}\leq 1$.
+In the linear model approach, $wpd\in R$ was assumed, whereas, $wpd$, Jensen-Shannon Distance (JSD) lies between 0 and 1. Furthermore, JSD follows a Chi-square distribution, which is a special case of Gamma distribution. Therefore, a generalized linear model could be fitted instead of a linear model to allow for the response variable to follow a Gamma distribution. The inverse link is used when we know that the mean response is bounded, which is applicable in our case since $0 \leq wpd\leq 1$.
 
 We fit a Gamma generalized linear model with the inverse link which is of the form:  
-$$y = a+b*log(x) + e$$, where $y = median(wpd_{raw})$, $x = nx*nfacet$.
-Let $E(y) = \mu$ and $a + b*log(x) = g(\mu)$ where $g$ is the link function. Then $g(\mu)=  1/mu$ and $\hat \mu  = 1/(\hat a + \hat b log(x))$. The residuals from this model $(y-\hat y) = (y-1/(\hat a + \hat b log(x)))$ would be expected to have no dependency on $x$. Thus,  $wpd_{glm}$ is chosen as the residuals from this model and is defined as:
-$wpd_{glm} = wpd_{raw} - 1/(\hat a + \hat b*log(nx*nfacet))$.
+$$y_l = a+b*log(z_l) + e_l$$, where $y_l = median_m(x_{l, m})$, $z_l$ is the $l^{th}$ panel and $e_l$ are idiosyncratic errors. Let $E(y) = \mu$ and $a + b*log(z) = g(\mu)$ where $g$ is the link function. Then $g(\mu)=  1/\mu$ and $\hat \mu  = 1/(\hat a + \hat b log(z))$. The residuals from this model $(y-\hat y) = (y-1/(\hat a + \hat b log(z)))$ would be expected to have no dependency on $z$. Thus,  $wpd_{norm}^{glm}$ is chosen as the residuals from this model and is defined as:
+$wpd_{glm} = wpd - 1/(\hat a + \hat b*log(nx*nfacet))$.
 
 <!-- Please note: -->
 
@@ -622,7 +624,7 @@ $wpd_{glm} = wpd_{raw} - 1/(\hat a + \hat b*log(nx*nfacet))$.
 
 ```{r wpd-glm-horizontal, echo = FALSE, message=FALSE, fig.caption = "$wpd_{glm}$ is plotted against log(nx*nfacet) and this transformation leads to the median of $wpd_{glm}$ to have no relationship with log(nx*nfacet)"}
 
-G21 <- read_rds(here("simulations/raw/null_design_quantrans/data-agg/all_data_wpd_Gamma21.rds"))
+G21 <- read_rds(here("simulations/raw/null_design_quantrans/data-agg/all_data_wpd_N01.rds"))
 
 G21_median <- G21 %>% 
   group_by(nx*nfacet) %>% 
@@ -674,8 +676,13 @@ G21 %>%
   )
   ) +
   geom_point() + stat_summary(fun=mean, geom="line", aes(group=1), color = "blue") + 
-  ylab("wpd_glm = wpd_raw - 1/(a  + b*log(nx*nfacet))")
+  ylab("wpd_glm = wpd - 1/(a  + b*log(nx*nfacet))")
 ```
+
+```{r glm-tab}
+broom::tidy(glm_fit) %>% kable(caption = "Results of generalised linear model to capture the relationship between wpd and number of comparisons.")
+```
+
 
 ```{r wpd-glm-dist, fig.cap = " The distribution of $wpd_{glm}$ is plotted. The distributions are more similar across higher nx and nfacet and dissimilar for fewer nc and nfacets."}
 
@@ -687,7 +694,7 @@ G21_glm <- G21 %>%
              ),
          wpd_glm_scaled = ((wpd_glm*320)))
 
-G21_glm$wpd_glm_scaled %>% sd()
+#G21_glm$wpd_glm_scaled %>% sd()
 
 
 G21_glm %>% 
@@ -702,24 +709,23 @@ G21_glm %>%
 
 ## Combining normalizing approaches
 
-We see that the transformation through the modeling approach leads to very similar distribution across high $nx$ and $nfacet$ (higher than 7) and not so much for lower $nx$ and $nfacet$. Hence, the computational load of permutation approach could be alleviated by using the modeling approach for the higher $nx$ and $nfacet$, however, it is important that we use the permutation approach for lower $nx$ and $nfacet$. However, it is  difficult to compare the transformed $wpd$ from both of these approaches, since each of the variables is measured on a different scale (each of them have location 0). The transformed variables from the two approaches could be brought to the same scale so that for smaller categories, permutation approach is used and for larger categories, we can stick to modeling approach. These could be done through the following:
+We see that the transformation through the modeling approach leads to very similar distribution across high $nx$ and $nfacet$ (higher than 7) and not so much for lower $nx$ and $nfacet$. Hence, the computational load of permutation approach could be alleviated by using the modeling approach for the higher $nx$ and $nfacet$, however, it is important that we use the permutation approach for lower $nx$ and $nfacet$. However, it is  difficult to compare the transformed measure from both of these approaches, since each of the variables is measured on a different scale (although each of them have location 0). The transformed variables from the two approaches could be brought to the same scale so that for smaller categories, permutation approach is used and for larger categories, we can stick to modeling approach. 
 
- - Making the range of both the variables same by using min-max scaling method. In practice, however, we would only have one value of $wpd_{raw}$ which we need to transform using the modeling approach. Hence, min-max scaling approach could not be used here.
+<!-- These could be done through the following: -->
 
- - Standardizing the variables and expressing scores at standard deviation units. Again in practice, however, we would only have one value of $wpd_{raw}$ which we need to transform using the modeling approach. Hence, standardizing scores could not be used here as we do not have the mean and standard deviation of a series while using transformation using modeling.
- 
-- Make the location and scale of both the approaches similar so that they could be compared. Please note that the range of values could be different in this case, however location and scale are brought to same levels.)
+<!--  - Making the range of both the variables same by using min-max scaling method. In practice, however, we would only have one value of $wpd$ which we need to transform using the modeling approach. Hence, min-max scaling approach could not be used here. -->
 
+<!--  - Standardizing the variables and expressing scores at standard deviation units. Again in practice, however, we would only have one value of $wpd_{raw}$ which we need to transform using the modeling approach. Hence, standardizing scores could not be used here as we do not have the mean and standard deviation of a series while using transformation using modeling. -->
 
-The measure $wpd_{glm}$ has location 0 and standard deviation ~ 0.003, whereas the measure $wpd_{permutation}$ which is a z-score, has a normal distribution with location 0 and standard deviation 1. To bring them to the same scale, we have defined $wpd_{glm-scaled} = wpd_{glm}*300$, which brings the standard deviation of $wpd_{glm-scaled}$ to almost 1, without changing the location.
-
-The measure $wpd_{glm-scaled}$ seems to roughly follow a normal distribution except in the tails as could be seen in Figure \ref{fig:hist-qq} and the very method of permutation approach ensures that $wpd_{permutation}$ is also normally distributed. Further, they are brought to the similar scale and location and hence could be compared.
+<!-- - Make the location and scale of both the approaches similar so that they could be compared. Please note that the range of values could be different in this case, however location and scale are brought to same levels.) -->
 
 
-```{r hist-qq, fig.cap = "In panel a, the histogram of $wpd_{glm-scaled}$ is plotted. In parl b, the QQ plot is shown with the theoretical quantiles on the x-axis and $wpd_{glm-scaled}$ quantiles on the y-axis. The distribution looks symmetric and looks like normal except in the tails."}
+The measure $wpd_{glm}$ has an estimated location of 0 and standard deviation ~ $0.003$, whereas the measure $wpd_{perm}$ which is a z-score, has a normal distribution with location 0 and standard deviation 1. To bring them to the same scale, we have defined $wpd_{glm-scaled} = wpd_{glm}*320$, which brings the standard deviation of $wpd_{glm-scaled}$ to almost 1, without changing the location. The measure $wpd_{glm-scaled}$ seems to roughly follow a normal distribution except in the tails as could be seen in Figure \ref{fig:hist-qq} and the very method of permutation approach ensures that $wpd_{perm}$ is also normally distributed. Further, they are brought to the similar scale and location and hence could be compared.
+
+```{r hist-qq, fig.cap = "In panel a, the histogram of $wpd_{glm-scaled}^{norm}$ is plotted. In part b, the QQ plot is shown with the theoretical quantiles on the x-axis and $wpd_{glm-scaled}$ quantiles on the y-axis. The distribution looks symmetric and looks like normal except in the tails."}
 hist <- ggplot(G21_glm) +
   geom_histogram(aes(x = wpd_glm_scaled)) +
-  ggtitle("a")
+  ggtitle("a") + xlab("transformed wpd using glm approach")
 
 
 p <- ggplot(G21_glm, aes(sample = wpd_glm_scaled))
@@ -738,12 +744,12 @@ qqplot <-  p + geom_qq() + geom_qq_line() + coord_fixed(ratio = 4/5) +
 hist + qqplot
 ```  
 
-```{r dist-new-same-scale-link, fig.cap="w$pd_permutation$ and $wpd_{glm-scaled}$ are plotted together on the same scale. They also have the same location and hence the values from these two approaches could be compared across panels. $wpd_{glm-scaled}$ would be used to normalise $wpd_{raw}$ for higher $nx$ and $nfacet$ and $wpd_{glm-scaled}$ would be used for smaller levels to alleviate the problem of computational time."}
-# 
-# G21_permutation <- read_rds("simulations/norm/null_design_quantrans_nperm/data-agg/all_data_wpd_Gamma21.rds") %>%
-#   rename("wpd_permutation" = "value")
-# 
-# 
+```{r dist-new-same-scale-link, fig.cap="wpd_perm$ and $wpd_{glm-scaled}$ are plotted together on the same scale. They also have the same location and hence the values from these two approaches could be compared across panels. $wpd_{glm-scaled}$ would be used to normalise $wpd_{raw}$ for higher $nx$ and $nfacet$ and $wpd_{glm-scaled}$ would be used for smaller levels to alleviate the problem of computational time."}
+#
+G21_permutation <- read_rds(here("simulations/norm/null_design_quantrans_nperm/data-agg/all_data_wpd_N01.rds")) %>%
+  rename("wpd_permutation" = "value")
+
+
 # G21_model_data <- G21 %>%
 #   mutate(model =
 #            ((1/value)
@@ -755,9 +761,9 @@ hist + qqplot
 # G21_model_data$model %>% summary()
 
 G21_all_data <- G21_permutation %>% 
-  left_join(G21_lm, by = c("nx", "nfacet", "perm_id")) %>% 
+  # left_join(G21_lm, by = c("nx", "nfacet", "perm_id")) %>% 
   left_join(G21_glm, by = c("nx", "nfacet", "perm_id")) %>% 
-  pivot_longer(cols = c(3, 10),
+  pivot_longer(cols = c(3, 7),
                names_to = "type_estimate",
                values_to = "value_estimate")
 G21_all_data$type_estimate = factor(G21_all_data$type_estimate , levels = c( "wpd_permutation", "wpd_glm_scaled"))
@@ -804,13 +810,24 @@ G21_all_data %>%
 #   range()
 ```
 
+Thus, the $wpd_{norm}$ is defined as follows:
+
+\begin{equation}
+wpd_{norm} =
+\begin{cases}
+wpd_{norm}^{perm},& \text{if } J, K <=5\\
+wpd_{norm}^{glm-scaled},              & \text{otherwise}\\
+\end{cases}
+\end{equation}
+
+
+
 ## Properties
 
-This section reports the results of a simulation study that was carried out to evaluate the behavior of $wpd_{norm}$. The behavior of $wpd_{norm}$ is explored in designs where there is in fact difference in distribution between facet categories ($D_{var_f}$) or across x-categories ($D_{var_x}$) or both ($D_{var_{all}}$). Using $\omega =  \{1, 2, \dots, 10\}$ and $\lambda = seq(from  = 0.1, to = 0.9, by = 0.05)$, observations are drawn from a N(0,1) distribution for each combination of $nx$ and $nfacet$ from the following sets: $nx = nfacet =  \{2, 3, 5, 7, 14, 20, 31, 50\}$. $ntimes = 500$ is assumed for this setup as well. Furthermore, to generate different distributions across different combination of facet and x levels, the following method is deployed - suppose the distribution of the combination of first levels of $x$ and $facet$ category is $N(\mu,\sigma)$ and $\mu_{jk}$ denotes the mean of the combination $(a_jb_k)$, then $\mu_{j.} = \mu + j\omega$ (for design $D_{var_x}$) and $\mu_{.k} = \mu + k\omega$ (for design $D_{var_f}$). 
+This section reports the results of a simulation study that was carried out to evaluate the behavior of $wpd_{norm}$ under different designs and other potential factors. The behavior of $wpd_{norm}$ is explored in designs where there is in fact difference in distribution between facet categories ($D_{var_f}$) or across x-categories ($D_{var_x}$) or both ($D_{var_{all}}$). Using $\omega =  \{1, 2, \dots, 10\}$ and $\lambda = seq(from  = 0.1, to = 0.9, by = 0.05)$, observations are drawn from a N(0,1) distribution for each combination of $nx$ and $nfacet$ from the following sets: $nx = nfacet =  \{2, 3, 5, 7, 14, 20, 31, 50\}$. $ntimes = 500$ is assumed for this setup as well. Furthermore, to generate different distributions across different combination of facet and x levels, the following method is deployed - suppose the distribution of the combination of first levels of $x$ and $facet$ category is $N(\mu,\sigma)$ and $\mu_{jk}$ denotes the mean of the combination $(a_jb_k)$, then $\mu_{j.} = \mu + j\omega$ (for design $D_{var_x}$) and $\mu_{.k} = \mu + k\omega$ (for design $D_{var_f}$). 
 
-The tabulated values and graphical representations of the simulation results are provided in Appendix. The learning from the simulations are as follows: The values of $wpd_{norm}$ is least for $D_{null}$, followed by
-$D_{var_f}$, $D_{var_x}$) and $D_{var_{all}}$). This is a desirable result since the measure $wpd_{norm}$ was designed such that this relationship holds.
-Furthermore, the distribution of the measure $wpd_{norm}$ does not change for different facet and x categories. The distribution of $wpd_{norm}$ looks similar with at least the mean and standard of the distributions being uniform across panels. This means,  $wpd_{norm}$ could be used to measure differences in distribution across panels. Also, note that since the data is processed using normal-quantile-transform, this measure is independent of the initial distribution of the underlying data and hence is also comparable across different data sets. This is valid for the case when sample size $ntimes$ for each combination of categories is at least 30 and  $nperm$ used for computing $wpd_{norm}$ is at least 100. More detailed results about the properties of $wpd_{raw}$ and $wpd_{norm}$ could be found in Appendix.
+The tabulated values and graphical representations of the simulation results are provided in the Supplementary paper. The learning from the simulations are as follows: The values of $wpd_{norm}$ is least for $D_{null}$, followed by
+$D_{var_f}$, $D_{var_x}$) and $D_{var_{all}}$). This is a desirable result since the measure $wpd_{norm}$ was designed such that this relationship holds. Furthermore, the distribution of the measure $wpd_{norm}$ does not change for different facet and x categories. The distribution of $wpd_{norm}$ looks similar with at least the mean and standard of the distributions being uniform across panels. This means $wpd_{norm}$ could be used to measure differences in distribution across panels. Also, note that since the data is processed using normal-quantile-transform, this measure is independent of the initial distribution of the underlying data and hence is also comparable across different data sets. This is valid for the case when sample size $ntimes$ for each combination of categories is at least 30 and  $nperm$ used for computing $wpd_{norm}$ is at least 100. More detailed results about the properties of $wpd_{norm}$ could be found in the Supplementary paper.
 
 # Ranking and selecting significant harmonies
 
